manifests/mrfriendly/authserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authserver-deployment
  namespace: mrfriendly
  labels:
    app: authserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authserver
  template:
    metadata:
      labels:
        app: authserver
    spec:
      containers:
      - name: authserver
        image: registry.thedutchmc.nl/authserver:latest
        ports:
        - name: web
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: authserver-service
  namespace: mrfriendly
spec:
  selector:
    app: authserver
  ports:
  - protocol: TCP
    name: api
    port: 80
    targetPort: 80
