manifests/mrfriendly/api-mrfriendly-nl.yaml
apiVersion: v1
kind: Service
metadata:
  name: mrfriendly-auth-service
  namespace: mrfriendly
spec:
  type: ExternalName
  externalName: 192.168.1.7
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-mrfriendly-nl-ingress
  namespace: mrfriendly
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  tls:
  - hosts:
    - api.mrfriendly.nl
    secretName: api-mrfriendly-nl-tls-secret
  rules:
  - host: api.mrfriendly.nl
    http:
      paths:
      - path: /authentication(/|$)(.*)
        backend:
          serviceName: mrfriendly-auth-service
          servicePort: 8080
