manifests/mrfriendly/authlander.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authlander
  namespace: mrfriendly
  labels:
    app: authlander
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authlander
  template:
    metadata:
      labels:
        app: authlander
    spec:
      containers:
      - name: authlander
        image: docker-registry.k8s.array21.dev/authlander:latest
        ports:
        - name: api
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: authlander
  namespace: mrfriendly
spec:
  selector:
    app: authlander
  ports:
  - protocol: TCP
    name: api
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authlander
  namespace: mrfriendly
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-mrfriendly"
spec:
  tls:
  - hosts:
    - authlander.intern.mrfriendly.nl
    secretName: authlander-intern-mrfriendly-nl
  rules:
  - host: authlander.intern.mrfriendly.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authlander
            port:
              number: 8080
