manifests/mrfriendly/crmquery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crmquery
  namespace: mrfriendly
  labels:
    app.kubernetes.io/name: crmquery
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: crmquery
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crmquery
    spec:
      automountServiceAccountToken: false
      containers:
      - name: frontend
        imagePullPolicy: Always
        image: docker-registry.k8s.array21.dev/mrfriendly-crmquery-frontend
        securityContext:
          capabilities:
            drop:
            - CAP_NET_RAW
        ports:
        - containerPort: 80
      - name: api
        imagePullPolicy: Always
        image: docker-registry.k8s.array21.dev/mrfriendly-crmquery-api
        securityContext:
          capabilities:
            drop:
            - CAP_NET_RAW
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: crmquery
  namespace: mrfriendly
spec:
  selector:
    app.kubernetes.io/name: crmquery
  ports:
  - protocol: TCP
    name: web
    port: 80
    targetPort: 80
  
  - protocol: TCP
    name: api
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crmquery-frontend
  namespace: mrfriendly
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-mrfriendly"

spec:
  tls:
  - hosts:
    - crmquery.intern.mrfriendly.nl
    secretName: crmquery-intern-mrfriendly-tls
  rules:
  - host: crmquery.intern.mrfriendly.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crmquery
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crmquery-api
  namespace: mrfriendly
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-mrfriendly"
spec:
  tls:
  - hosts:
    - crmquery-api.intern.mrfriendly.nl
    secretName: crmquery-api-intern-mrfriendly-tls
  rules:
  - host: crmquery-api.intern.mrfriendly.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crmquery
            port:
              number: 8080
