manifests/mrfriendly/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: mrfriendly
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        imagePullPolicy: Always
        image: docker-registry.k8s.array21.dev/mrfriendly-dashboard:latest
        ports:
        - containerPort: 80
          name: web
        - name: AUTHLANDER_HOST
          value: "https://authlander.intern.mrfriendly.nl"
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: mrfriendly
spec:
  selector:
    app: dashboard
  ports:
  - protocol: TCP
    name: web
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: mrfriendly
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-mrfriendly"
spec:
  tls:
  - hosts:
    - dashboard.intern.mrfriendly.nl
    secretName: dashboard-intern-mrfriendly-tls
  rules:
  - host: dashboard.intern.mrfriendly.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-plain-url
  namespace: mrfriendly
  annotations:
    kubernets.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - dashboard.intern.mrfriendly.nl
    secretName: mrfriendly-tls
  rules:
  - host: intern.mrfriendly.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard
            port:
              number: 80
