manifests/mrfriendly/espocrm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espocrm
  namespace: mrfriendly
  labels:
    app: espocrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: espocrm
  template:
    metadata:
      labels:
        app: espocrm
    spec:
      containers:
      - name: espocrm
        imagePullPolicy: Always
        image: docker-registry.k8s.array21.dev/mrfriendly-espocrm:latest
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: webdir
          mountPath: /var/www/espocrm
      volumes:
      - name: webdir
        persistentVolumeClaim:
          claimName: espocrm
---
apiVersion: v1
kind: Service
metadata:
  name: espocrm
  namespace: mrfriendly
spec:
  selector:
    app: espocrm
  ports:
  - protocol: TCP
    name: web
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: espocrm
  namespace: mrfriendly
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
    cert-manager.io/cluster-issuer: "letsencrypt-mrfriendly"
spec:
  tls:
  - hosts:
    - espocrm.intern.mrfriendly.nl
    secretName: espocrm-intern-mrfriendly-nl
  rules:
  - host: espocrm.intern.mrfriendly.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: espocrm
            port:
              number: 80
