manifests/mrfriendly/mailsync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailsync
  namespace: mrfriendly
  labels:
    app: mailsync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailsync
  template:
    metadata:
      labels:
        app: mailsync
    spec:
      containers:
      - name: mailsync-api
        image: docker-registry.k8s.array21.dev/mrfriendly-mailsync-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: api-port
---
apiVersion: v1
kind: Service
metadata:
  name: mailsync
  namespace: mrfriendly
spec:
  selector:
    app: mailsync
  ports:
  - protocol: TCP
    name: api
    port: 8080
    targetPort: 8080
  #TODO Frontend ports
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailsync-api
  namespace: mrfriendly
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-mrfriendly"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - mailsync-api.intern.mrfriendly.nl
    secretName: mailsync-api-intern-mrfriendly-tls
  rules:
  - host: mailsync-api.intern.mrfriendly.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailsync
            port:
              number: 8080
