manifests/mrfriendly/partner-redirect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: partner-redirect
  namespace: mrfriendly
  labels:
    app: partner-redirect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: partner-redirect
  template:
    metadata:
      labels:
        app: partner-redirect
    spec:
      containers:
      - name: api
        imagePullPolicy: Always
        image: docker-registry.k8s.array21.dev/mrfriendly-partner-redirect
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: partner-redirect
  namespace: mrfriendly
spec:
  selector:
    app: partner-redirect
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: partner-redirect
  namespace: mrfriendly
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-mrfriendly"
spec:
  tls:
  - hosts:
    - redirect.api.mrfriendly.nl
    secretName: redirect-api-mrfriendly-nl
  rules:
  - host: redirect.api.mrfriendly.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: partner-redirect
            port: 
              number: 8080
