manifests/mrfriendly/reporterr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporterr
  namespace: mrfriendly
  labels:
    app: reporterr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporterr
  template:
    metadata:
      labels:
        app: reporterr
    spec:
      containers:
      - name: reporterr
        imagePullPolicy: Always
        image: docker-registry.k8s.array21.dev/mrfriendly-reporterr:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: reporterr
  namespace: mrfriendly
spec:
  selector:
    app: reporterr
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reporterr-api
  namespace: mrfriendly
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-mrfriendly"
spec:
  tls:
  - hosts:
    - reporterr-api.intern.mrfriendly.nl
    secretName: reporterr-api-intern-mrfriendly-nl
  rules:
  - host: reporterr-api.intern.mrfriendly.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reporterr
            port:
              number: 8080
