manifests/mrfriendly/tyrell-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tyrell-staging
  namespace: mrfriendly
  labels:
    app.kubernetes.io/name: tyrell-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tyrell-staging
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tyrell-staging
    spec:
      automountServiceAccountToken: false
      containers:
      - name: tyrell-staging
        image: docker-registry.k8s.array21.dev/mrfriendly-smartbathroom-tyrell:latest
        ports:
        - name: api
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tyrell-staging
  namespace: mrfriendly
spec:
  selector:
    app.kubernetes.io/name: tyrell-staging
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tyrell-staging
  namespace: mrfriendly
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-mrfriendly"
spec:
  tls:
  - hosts:
    - tyrell.staging.mrfriendly.nl
    secretName: tyrell-staging-mrfriendly-nl
  rules:
  - host: tyrell.staging.mrfriendly.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tyrell-staging
            port:
              number: 8080
